<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff9800">

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:drawableStart="@drawable/ic_person"
        android:background="@drawable/custom_input"
        android:drawablePadding="12dp"
        android:hint="@string/name"
        android:textColorHint="#3e2723"
        android:textColor="#3e2723"
        android:inputType="text"
        android:maxLines="1"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/etEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:drawableStart="@drawable/ic_email"
        android:background="@drawable/custom_input"
        android:drawablePadding="12dp"
        android:hint="@string/email_address"
        android:textColorHint="#3e2723"
        android:textColor="#3e2723"
        android:inputType="text"
        android:maxLines="1"
        android:textSize="20sp"
        />


    <EditText
        android:id="@+id/etMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etEmailAddress"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:drawableStart="@drawable/ic_mobile"
        android:background="@drawable/custom_input"
        android:drawablePadding="12dp"
        android:hint="@string/mobile_number"
        android:textColorHint="#3e2723"
        android:textColor="#3e2723"
        android:inputType="number"
        android:maxLines="1"
        android:textSize="20sp"
        android:maxLength="10"
        />

    <EditText
        android:id="@+id/etDeliveryAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etMobileNumber"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:drawableStart="@drawable/ic_address"
        android:background="@drawable/custom_input"
        android:drawablePadding="12dp"
        android:hint="@string/delivery_address"
        android:textColorHint="#3e2723"
        android:textColor="#3e2723"
        android:inputType="number"
        android:maxLines="1"
        android:textSize="20sp"
        android:maxLength="10"
        />


    <EditText
        android:id="@+id/etChoosePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etDeliveryAddress"
        android:drawableStart="@drawable/ic_password"
        android:background="@drawable/custom_input"
        android:drawablePadding="12dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:hint="@string/choose_password"
        android:textColorHint="#3e2723"
        android:textColor="#3e2723"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etChoosePassword"
        android:drawableStart="@drawable/ic_password"
        android:background="@drawable/custom_input"
        android:drawablePadding="12dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:hint="@string/confirm_password"
        android:textColorHint="#3e2723"
        android:textColor="#3e2723"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etConfirmPassword"
        android:drawablePadding="12dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:textColor="@color/white"
        android:text="@string/register"
        android:textStyle="bold"
        android:textSize="20dp"
        android:backgroundTint="#3e2723"
        />

</RelativeLayout>