<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff9800">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome to FoodHub"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textColor="#3e2723"/>
    <ImageView
        android:id="@+id/logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/logo"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/txtForgotPasstxt"
        android:layout_below="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_pass_text"
        android:textSize="18sp"
        android:textColor="#3e2723"
        android:textStyle="bold"
        android:padding="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <EditText
        android:id="@+id/etMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtForgotPasstxt"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:drawableStart="@drawable/custom_email_items"
        android:background="@drawable/custom_input"
        android:drawablePadding="12dp"
        android:hint="@string/mobile_number"
        android:textColorHint="#3e2723"
        android:textColor="#3e2723"
        android:inputType="number"
        android:maxLines="1"
        android:textSize="20sp"
        android:maxLength="10"
        />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etMobileNumber"
        android:drawableStart="@drawable/custom_password_items"
        android:background="@drawable/custom_input"
        android:drawablePadding="12dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:hint="@string/password"
        android:textColorHint="#3e2723"
        android:textColor="#3e2723"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPassword"
        android:drawablePadding="12dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:textColor="@color/white"
        android:text="@string/next"
        android:textStyle="bold"
        android:textSize="20dp"
        android:backgroundTint="#3e2723"
        />

</RelativeLayout>