<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#212121">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/imgtony_stark_new"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/tony_stark_new"
                android:layout_margin="20dp"/>
            <TextView
                android:id="@+id/nam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tony Stark"
                android:textSize="22sp"
                android:layout_toEndOf="@+id/imgtony_stark_new"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:textColor="#fafafa"/>
            <TextView
                android:id="@+id/emai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="starkindustries@gmail.com"
                android:textSize="18sp"
                android:layout_toEndOf="@+id/imgtony_stark_new"
                android:layout_below="@+id/nam"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:textColor="#fafafa"/>
            <TextView
                android:id="@+id/phoneNumbe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_11987656789"
                android:textSize="18sp"
                android:layout_toEndOf="@+id/imgtony_stark_new"
                android:layout_below="@+id/emai"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:textColor="#fafafa"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/captain_america"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/captain_america"
                android:layout_margin="20dp"/>
            <TextView
                android:id="@+id/na"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/steve_rogers"
                android:textSize="22sp"
                android:layout_toEndOf="@+id/captain_america"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:textColor="#fafafa"/>
            <TextView
                android:id="@+id/ema"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/capamerica_gmail_com"
                android:textSize="18sp"
                android:layout_toEndOf="@+id/captain_america"
                android:layout_below="@+id/na"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:textColor="#fafafa"/>
            <TextView
                android:id="@+id/phoneNumb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_11987656788"
                android:textSize="18sp"
                android:layout_toEndOf="@+id/captain_america"
                android:layout_below="@+id/ema"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:textColor="#fafafa"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/imgthor"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/thor"
                android:layout_margin="20dp"/>
            <TextView
                android:id="@+id/n"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thor_odinson"
                android:textSize="22sp"
                android:layout_toEndOf="@+id/imgthor"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:textColor="#fafafa"/>
            <TextView
                android:id="@+id/em"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="thorgod@gmail.com"
                android:textSize="18sp"
                android:layout_toRightOf="@+id/imgthor"
                android:layout_below="@+id/n"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:textColor="#fafafa"/>
            <TextView
                android:id="@+id/phoneNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+11987656787"
                android:textSize="18sp"
                android:layout_toRightOf="@+id/imgthor"
                android:layout_below="@+id/em"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:textColor="#fafafa"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/hulk"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/hulk"
                android:layout_margin="20dp"/>
            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hulk"
                android:textSize="22sp"
                android:layout_toRightOf="@+id/hulk"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:textColor="#fafafa"/>
            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="hulk@gmail.com"
                android:textSize="18sp"
                android:layout_toRightOf="@+id/hulk"
                android:layout_below="@+id/name"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:textColor="#fafafa"/>
            <TextView
                android:id="@+id/phoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+11987656786"
                android:textSize="18sp"
                android:layout_toRightOf="@+id/hulk"
                android:layout_below="@+id/email"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:textColor="#fafafa"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/widow"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/widow"
                android:layout_margin="20dp"/>
            <TextView
                android:id="@+id/ne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Natasha Romanoff"
                android:textSize="22sp"
                android:layout_toRightOf="@+id/widow"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:textColor="#fafafa"/>
            <TextView
                android:id="@+id/e"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="widow@gmail.com"
                android:textSize="18sp"
                android:layout_toRightOf="@+id/widow"
                android:layout_below="@+id/ne"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:textColor="#fafafa"/>
            <TextView
                android:id="@+id/phoneNu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+11987656785"
                android:textSize="18sp"
                android:layout_toRightOf="@+id/widow"
                android:layout_below="@+id/e"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:textColor="#fafafa"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/black_panther"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/black_panther"
                android:layout_margin="20dp"/>
            <TextView
                android:id="@+id/nme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Black Panther"
                android:textSize="22sp"
                android:layout_toRightOf="@+id/black_panther"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:textColor="#fafafa"/>
            <TextView
                android:id="@+id/eml"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="wakandaforever@gmail.com"
                android:textSize="18sp"
                android:layout_toRightOf="@+id/black_panther"
                android:layout_below="@+id/nme"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:textColor="#fafafa"/>
            <TextView
                android:id="@+id/phoneNumbr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+11987656786"
                android:textSize="18sp"
                android:layout_toRightOf="@+id/black_panther"
                android:layout_below="@+id/eml"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:textColor="#fafafa"/>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>